--- a/Test/imgui.ini
+++ b/Test/imgui.ini
@@ -1,5 +1,10 @@
-[Debug##Default]
+[Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
+
+[Window][ImGui Demo]
+Pos=309,72
+Size=380,412
 Collapsed=0
 
