--- a/FlowerGarden/FlowerGarden.vcxproj.filters
+++ b/FlowerGarden/FlowerGarden.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Systems\Draggable_S.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="Systems\Grid_S.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FlowerGame.h">
@@ -39,6 +42,12 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="Systems\Draggable_S.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="Components\Grid.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="Systems\Grid_S.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
